@@ -3,6 +3,7 @@
         * Version 1.2.0 released
         =========================
 
+        Add GSkyMap FITS HDU constructor
         Add leap second for 1-1-2017 (#1887)
         Add region() method to GModelSpatial (#1764)
         Add composite spatial and spectral models (#1706)
